[package]
name = "calltrace"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A service to structure your call traces (call stacks)"
repository = "https://github.com/Celthi/calltrace.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.62"}
regex = "1.6.0"
once_cell= "1.13.0"
